alertmanager/alertmanager-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
  name: ingress-alertmanager
spec:
  rules:
  - host: ***-k8s.****.com
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-main
          servicePort: 9093
